--- a/behavioral pattern/design_state/design_state.vcxproj
+++ b/behavioral pattern/design_state/design_state.vcxproj
@@ -53,7 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.\C++;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\C++;.\C;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -70,7 +70,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.\C++;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\C++;.\C;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -85,12 +85,17 @@
     <ClInclude Include="C++\state_o1.h" />
     <ClInclude Include="C++\state_o2.h" />
     <ClInclude Include="C++\state_o3.h" />
+    <ClInclude Include="C\cstate.h" />
+    <ClInclude Include="C\cstate_handle.h" />
+    <ClInclude Include="C\cstate_mgr.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C++\state_mgr.cpp" />
     <ClCompile Include="C++\state_o1.cpp" />
     <ClCompile Include="C++\state_o2.cpp" />
     <ClCompile Include="C++\state_o3.cpp" />
+    <ClCompile Include="C\cstate_handle.c" />
+    <ClCompile Include="C\cstate_mgr.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
