--- a/creational pattern/design_simple_factory/design_simple_factory.vcxproj
+++ b/creational pattern/design_simple_factory/design_simple_factory.vcxproj
@@ -78,6 +78,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="factory.h" />
+    <ClInclude Include="product.h" />
+    <ClInclude Include="product_o1.h" />
+    <ClInclude Include="product_o2.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="product_o1.cpp" />
+    <ClCompile Include="product_o2.cpp" />
+    <ClCompile Include="factory.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
