--- a/creational pattern/design_simple_factory/design_simple_factory.vcxproj.filters
+++ b/creational pattern/design_simple_factory/design_simple_factory.vcxproj.filters
@@ -34,5 +34,8 @@
     <ClCompile Include="product_o2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
