--- a/behavioral pattern/design_state/design_state.vcxproj.filters
+++ b/behavioral pattern/design_state/design_state.vcxproj.filters
@@ -67,5 +67,11 @@
     <ClCompile Include="C\cstate_mgr.c">
       <Filter>C\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>C++\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cmain.cpp">
+      <Filter>C\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
