--- a/creational pattern/design_abstract_factory/design_abstract_factory.vcxproj.filters
+++ b/creational pattern/design_abstract_factory/design_abstract_factory.vcxproj.filters
@@ -9,9 +9,57 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="factory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="productA1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="productA2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="productB1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="productB2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="factoryO1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="factoryO2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="productA.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="productB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="factoryO1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="factoryO2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="productA1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="productA2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="productB1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="productB2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
